Tenant and migrate to 8.8